# Contact-and-Friction

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/body/: Geometry.h  RigidBody.cpp  RigidBody.h  Scenarios.cpp  Scenarios.h
include/collision/: CollisionDetect.cpp  CollisionDetect.h
include/contact/: Contact.cpp  Contact.h
include/engine/: PhysicsWorld.cpp  PhysicsWorld.h
include/solver/: Solver.h  SolverBoxPGS.cpp  SolverBoxPGS.h
include/util/: MeshAssets.cpp  MeshAssets.h  OBJLoader.cpp  OBJLoader.h
include/viewer/: viewer.cpp  viewer.h
tutorials/: CMakeLists.txt
tutorials/000-basic-collision/: CMakeLists.txt  main.cpp
